cc/hurtle-cc-api-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generatedby: hurtle.it
  labels:
    app: hurtle-cc-api
  name: hurtle-cc-api
  namespace: demo
spec:
  replicas: 1
  selector:
    deploymentconfig: hurtle-cc-api
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hurtle-cc-api
        deploymentconfig: hurtle-cc-api
    spec:
      containers:
      - env:
        - name: USERNAME
          value: demo
        - name: PASSWORD
          value: LU4JiFJSuL0H3r5bCJ1A3A
        - name: VERSION
          value: "1"
        - name: SECRET
          value: a24b62cef52aef3a
        - name: SELF_REBUILD_URL
          value: https://opsv3.cloudcomplab.ch:8443/oapi/v1/namespaces/demo/buildconfigs/hurtle-cc-api/webhooks/a24b62cef52aef3a/generic
        - name: GLUE_NAME
          value: OpenShift3
        - name: DOMAIN
          value: .apps.opsv3.cloudcomplab.ch
        - name: NAMESPACE
          value: demo
        - name: URI
          value: https://opsv3.cloudcomplab.ch:8443
        image: 172.30.172.8:5000/demo/hurtle-cc-api@sha256:3297fdb425c973f023c891519358afa99065819d196a70ebbd5264ac2faf58c9
        imagePullPolicy: Always
        name: hurtle-cc-api
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8081
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - hurtle-cc-api
      from:
        kind: ImageStreamTag
        name: hurtle-cc-api:latest
    type: ImageChange
