cc/hurtle-cc-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generatedby: hurtle.it
  labels:
    app: hurtle-cc-api
  name: hurtle-cc-api
  namespace: demo
spec:
  ports:
  - name: admin-api
    nodePort: 0
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: hurtle-cc-api
  sessionAffinity: None
  type: ClusterIP
