cc/hurtle-cc-api-route.yaml
apiVersion: v1
kind: Route
metadata:
  annotations:
    openshift.io/generatedby: hurtle.it
  labels:
    app: hurtle-cc-api
  name: hurtle-cc-api
  namespace: demo
spec:
  host: hurtle-cc-api.demo.apps.opsv3.cloudcomplab.ch
  to:
    kind: Service
    name: hurtle-cc-api
status: {}
